# reaper-source-separation

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.models  LICENSE  Makefile  README.md  index.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  ci.yml  release.yml
scripts/: export_onnx.py
src/: actions.cpp  actions.h  audio_io.cpp  audio_io.h  backend.h  demucs_backend.cpp  demucs_backend.h  dialog.cpp  dialog.h  dialog.rc  dialog_win32.rc  file_utils.h  log.h  main.cpp  model_manager.cpp  model_manager.h  ort_loader.cpp  ort_loader.h  ort_manager.cpp  ort_manager.h  ort_provider.cpp  ort_provider.h  resource.h  roformer_backend.cpp  roformer_backend.h  separator.cpp  separator.h  stft.cpp  stft.h  swell_resgen.cpp  tracks.cpp  tracks.h
